@@ -25,6 +25,8 @@ c - crash     b - bug fix    e - enhancement    f - new feature  n - note
   b - fixed an off by one error for a case in get_correct_jobname
   e - altered the display_job_server_suffix parameter and the job_suffix_alias
       parameter so that they don't interfere with FQDN.
+  b - fixed open_std_file to setegid as well, this caused a problem with 
+      epilogue.user scripts.
 
 2.4.5
   b - epilogue.user scripts were being run with prologue argments. Fixed
